...

            <View style={styles.row}>
              <Input
                label="Tax"
                value={taxAmount}
                onChangeText={setTaxAmount}
                placeholder="0.00"
                keyboardType="decimal-pad"
                containerStyle={[styles.input, styles.halfInput]}
              />
              <Input
                label="Tip"
                value={tipAmount}
...
                    setNewItemDescription('');
                    setNewItemPrice('');
                  }}
                  style={styles.addItemButton}
                />
                <Button
                  title="Add"
                  onPress={handleAddItem}
                  loading={updating}
                  style={styles.addItemButton}
                />
              </View>
            </Card>
...
